--- a/hocvien.html
+++ b/hocvien.html
@@ -94,21 +94,21 @@
                                       </ol>
                                       <div class="carousel-inner">
                                          <div class="carousel-item active">
-                                            <img src="images/slide-index/slide1.jpg" class="d-block w-100" alt="...">
+                                            <img src="images/slide1.jpg" class="d-block w-100" alt="...">
                                             <div class="carousel-caption d-none d-md-block">
                                                <h5>.T.</h5>
                                                <p>...</p>
                                             </div>
                                          </div>
                                          <div class="carousel-item">
-                                            <img src="images/slide-index/slide2.jpg" class="d-block w-100" alt="...">
+                                            <img src="images/slide2.jpg" class="d-block w-100" alt="...">
                                             <div class="carousel-caption d-none d-md-block">
                                                <h5>.Q.</h5>
                                                <p>...</p>
                                             </div>
                                          </div>
                                          <div class="carousel-item">
-                                            <img src="images/slide-index/slide3.jpg" class="d-block w-100" alt="...">
+                                            <img src="images/slide3.jpg" class="d-block w-100" alt="...">
                                             <div class="carousel-caption d-none d-md-block">
                                                <h5>.L.</h5>
                                                <p>...</p>
