--- a/home.html
+++ b/home.html
@@ -176,12 +176,12 @@
                               <div class="col-md-3">
                                 <div class="card align_card boder_contact " style="width: 16.5rem;">
  <ul class="list-group  list-group-flush contact_img boder_contact_li ">
-  <a href="#12"> <li  class=" bg_li list-group-item"> Contact to FB</li></a>
-  <a href="#13">  <li class="bg_li list-group-item">Contact to Zalo</li></a>
-    <a href="#14"> <li class="bg_li list-group-item">Contact to twiter</li></a>
-      <a href="#15">  <li class="bg_li list-group-item">Contact instagram</li></a>
-          <a href="#16"> <li class="bg_li list-group-item">Phone: 0368836321 </li></a>
-            <a href="#17">  <li class="bg_li list-group-item">emai:Truog@gmail.com </li></a>
+  <a href="#12"> <li  class=" bg_li list-group-item"> </li></a>
+  <a href="#13">  <li class="bg_li list-group-item"></li></a>
+    <a href="#14"> <li class="bg_li list-group-item"></li></a>
+      <a href="#15">  <li class="bg_li list-group-item"></li></a>
+          <a href="#16"> <li class="bg_li list-group-item"> </li></a>
+            <a href="#17">  <li class="bg_li list-group-item"></li></a>
  </ul>
 </div>
 
