--- a/hocvien.html
+++ b/hocvien.html
@@ -12,7 +12,7 @@
       <link rel="stylesheet" href="css/news.css">
       <title>TOBICA - Trang Chủ</title>
    </head>
-   <body >
+   <body style="background:#F7F5F4;">
       <!-- Start Header -->
       <div class="main">
          <div class="wrapper">
@@ -128,7 +128,7 @@
                                         <!-- End Slide-show -->
                                      <!--Câu chuyện thành công-->
                                      <!-- Start content -->
-                                   <h1 style="color:Orange;text-align:center;">câu chuyện Thành công</h1>
+                                   <h1 style="color:Orange;text-align:center;">Success Story</h1>
                      <div class="row" id="bgr" >
 
                      <div class="col-sm-3">
@@ -148,6 +148,7 @@
                           </figure>
                          </div>
                        </div>
+
                      </div>
 
                      <div class="col-sm-3">
@@ -192,6 +193,7 @@
   <li class="  list-group-item banner"><a><img src="images/banner6.jpg"  alt=""> <i>Ông chủ Fackbook chuyển nhượng công ty cho FPT.</i> </a></li>
 
 </ul>
+
                      </div>
                    </div>
                    <div class="row" id="bgrr">
@@ -244,12 +246,12 @@
 
                    <div class="col-sm-3">
                      <ul class="list-group" id="list2">
-     <li class=" btn list-group-item active ">Tin tức nổi bật</li>
-     <li class=" btn list-group-item banner"> <img  src="images/banner1.jpg" alt=""><i> Hà nội Rực rỡ ngày tết nguyên đán  </i></li>
-     <li class=" btn list-group-item banner"><img  src="images/banner2.jpg" alt=""><i>Cận cảnh xế hộp tiền tỷ của ca sỹ Tuấn Hưng</i></li>
-     <li class="btn  list-group-item banner"><img  src="images/banner3.jpg" alt=""><i>"Khá Bảnh" ra mắt MV gây chấn động Giang hồ</i> </li>
+                     <li class=" btn list-group-item active ">Tin tức nổi bật</li>
+                     <li class=" btn list-group-item banner"> <img  src="images/banner1.jpg" alt=""><i> Hà nội Rực rỡ ngày tết nguyên đán  </i></li>
+                     <li class=" btn list-group-item banner"><img  src="images/banner2.jpg" alt=""><i>Cận cảnh xế hộp tiền tỷ của ca sỹ Tuấn Hưng</i></li>
+                     <li class="btn  list-group-item banner"><img  src="images/banner3.jpg" alt=""><i>"Khá Bảnh" ra mắt MV gây chấn động Giang hồ</i> </li>
 
-   </ul>
+                     </ul>
                    </div>
                  </div>
       <!-- Kết thúc nội dung-->
@@ -278,10 +280,8 @@
              <div class="col-sm-8">
                <div class="card  doan_van">
      <div class="card-body">
-       <h5 class="card-title"><b>Tiếng ANh Quan Trọng như thế nào ?</b></h5>
-       <p class="card-text">Tiếng Anh và mức độ quan trọng đối với cuộc sống của học sinh, sinh viên Việt Nam.
-Khi nhắc tới tiếng Anh, người ta nghĩ ngay đó là ngôn ngữ toàn cầu: là ngôn ngữ chính thức của hơn 53 quốc gia và vùng lãnh thổ, là ngôn ngữ chính thức của EU và là ngôn ngữ thứ 3 được nhiều người sử dụng nhất chỉ sau tiếng Trung Quốc và Tây Ban Nha (các bạn cần chú ý là Trung quốc có số dân hơn 1 tỷ người). Các sự kiện quốc tế , các tổ chức toàn cầu,… cũng mặc định coi tiếng Anh là ngôn ngữ giao tiếp.
-
+       <h5 class="card-title"><b>How important is English?</b></h5>
+       <p class="card-text">English and the level of importance to the lives of Vietnamese students and students. When it comes to English, people think of it as a global language: the official language of more than 53 countries and territories, the official language of the EU and the third language spoken by many people. most are only after Chinese and Spanish (you should note that China has a population of more than 1 billion people). International events, global organizations, etc. also default to English as the language of communication.
 </p>
 
      </div>
@@ -289,9 +289,9 @@ Khi nhắc tới tiếng Anh, người ta nghĩ ngay đó là ngôn ngữ toàn 
    </div>
     <div class="card doan_van">
    <div class="card-body">
-     <h5 class="card-title">Bãn Sẵn Sàng để Hành động</h5>
-     <p class="card-text">Hiểu được điều đó, nên hệ thống giáo dục của Việt Nam đã đưa tiếng Anh là môn học bắt buộc trên ghế nhà trường từ những năm tiểu học. Tiếng Anh cũng là môn thi tốt nghiệp bắt buộc các cấp.
-Nhưng thực trạng học tiếng Anh ở Việt Nam vẫn còn là vấn đề đau đầu của các nhà làm giáo dục cũng như cha mẹ học sinh muốn con e mình giỏi tiếng Anh. Làm thế nào để tìm được một phương pháp học tiếng Anh chuẩn, giúp con e mình tiến bộ nhanh, tại sao các bạn học sinh, sinh viên học những hơn chục năm tiếng Anh trong trường mà khi ra trường thì đa số lại không giao tiếp được bằng tiếng Anh? </p>
+     <h5 class="card-title">Be Ready To Act</h5>
+     <p class="card-text">Understanding that, the Vietnamese education system has put English as a compulsory subject in the school chair from the elementary years. English is also the required graduation exam for all levels.
+But the reality of learning English in Vietnam is still a headache for educators as well as parents who want their children to be good at English. How to find a standard method of learning English, help your child to improve rapidly, why do the students and students study more than ten years of English in the school but when they graduate, most of them do not deliver Can you speak English? </p>
       <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
    </div>
    </div>
