--- a/home.html
+++ b/home.html
@@ -12,6 +12,7 @@
         <script src="js/jquery-3.3.1.min.js"></script>
       <link rel="stylesheet" href="css/news.css">
       <title>TOBICA - Trang Chủ</title>
+      <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
       <link rel="stylesheet" href="css/home.css">
       <script type="text/javascript">
       $(document).ready(function(){
@@ -46,7 +47,8 @@
       })
       </script>
    </head>
-   <body>
+   <body style="background:#F7F5F4;">
+
       <!-- Start Header -->
       <div class="main">
          <div class="wrapper">
@@ -163,8 +165,8 @@
 
                                        <!-- Start Content -->
                                <div class="row">
-                                <div class="col-md-12 text-center bg-warning">
-                                  <h3 style="color:white"> few course </h1>
+                                <div class="col-md-12 text-center text-warning bg-warning">
+                                  <h3 style=""> đ</h3>
                                 </div>
                                </div>
 
@@ -174,16 +176,17 @@
 
 
                               <div class="col-md-3">
-                                <div class="card align_card boder_contact " style="width: 16.5rem;">
- <ul class="list-group  list-group-flush contact_img boder_contact_li ">
-  <a href="#12"> <li  class=" bg_li list-group-item"> </li></a>
-  <a href="#13">  <li class="bg_li list-group-item"></li></a>
-    <a href="#14"> <li class="bg_li list-group-item"></li></a>
-      <a href="#15">  <li class="bg_li list-group-item"></li></a>
-          <a href="#16"> <li class="bg_li list-group-item"> </li></a>
-            <a href="#17">  <li class="bg_li list-group-item"></li></a>
- </ul>
-</div>
+                          <div class="fast_access  ">
+                           <ul class="list_access ">
+                       <li ><img src="images/hometobica/home.png" width="40px" style="margin-right:5px;" alt="">FAST ACCESS</li>
+                      <li><a href="#11" ><img src="images/hometobica/muiten.png" alt="">basic Class 1</a></li>
+                      <li><a href="#12"><img src="images/hometobica/muiten.png" alt="">Basic class 2</a></li>
+                      <li><a href="#13"><img src="images/hometobica/muiten.png" alt="">Event</a></li>
+                      <li><a href="#14"><img src="images/hometobica/muiten.png" alt="">Advanced English 1</a></li>
+                      <li><a href="#16"><img src="images/hometobica/muiten.png" alt="">News</a></li>
+                      <li><a href="#15"><img src="images/hometobica/muiten.png" alt="">Toetic Class  <img src="images/hometobica/new.gif" width="40px;" alt=""> </a></li>
+                           </ul>
+                          </div>
 
                               </div>
 
@@ -194,8 +197,8 @@
 
    <div class="card-body">
 
-     <p class="card-text">Tiếng Anh Cơ Bản phần 1</p>
-     <a href="#" class="btn btn-danger">MORE</a>
+     <p class="card-text">Basic Class 1</p>
+     <a href="#" class="btn btn-warning">MORE</a>
    </div>
  </div>
 </div>
@@ -206,8 +209,8 @@
 <img class="card-img-top" src="images/hometobica/kh4.jpg" alt="Card image cap">
 <div class="card-body">
 
-<p class="card-text "> Tiếng Anh cơ bản phần 2</p>
-<a href="#" class="btn btn-danger">MORE</a>
+<p class="card-text "> Basic class 2</p>
+<a href="#" class="btn btn-warning">MORE</a>
 </div>
 </div>
 
@@ -220,8 +223,8 @@
                                   <img class="card-img-top" src="images/hometobica/kh2.jpg" alt="Card image cap">
                                   <div class="card-body">
 
-                                    <p class="card-text">Tiếng Anh cơ bản phần 3</p>
-                                       <a href="#" class="btn btn-danger">MORE</a>
+                                    <p class="card-text">Toeic CLASS</p>
+                                       <a href="#" class="btn btn-warning">MORE</a>
                                   </div>
                                 </div>
                               </div>
@@ -245,7 +248,7 @@
                                   <div class="card-body">
 
                                     <p class="card-text">Luyện tập IELTS</p>
-                                       <a href="#" class="btn btn-danger">MORE</a>
+                                       <a href="#" class="btn btn-warning">MORE</a>
                                   </div>
 
 
@@ -261,7 +264,7 @@
                                   <div class="card-body">
 
                                     <p class="card-text">Tiếng Anh giao tiếp</p>
-                                         <a href="#" class="btn btn-danger" >MORE</a>
+                                         <a href="#" class="btn btn-warning" >MORE</a>
                                   </div>
                                 </div>
                               </div>
@@ -273,7 +276,7 @@
                                   <div class="card-body">
 
                                     <p class="card-text">Tiếng Anh Nâng cao .</p>
-                                       <a href="#" class="btn btn-danger">MORE</a>
+                                       <a href="#" class="btn btn-warning">MORE</a>
                                   </div>
                                 </div>
                               </div>
@@ -282,32 +285,48 @@
 
              </div>
              <div class="row">
-                 <h1>YOUR ENGLISH IS POOR</h1>
-             </div>
-             <div class="row">
-               <div class="col-md-3 think">
+               <div class="col-md-12 none">
 
-            <img src="images/hometobica/think.png" alt="">
-               </div>
-               <div class="col-md-1">
-
-               </div>
-               <div class="col-md-8">
-                 <div class=" card_think">
-    <div class="card-body">
-      <h5 class="card-title">EFFORT</h5>
-      <p class="card-text">Poor English can delay the publication of research. A recent article in New Scientist, a British weekly science magazine, mentions that poor English “is another factor that puts some scientists at a disadvantage. Rudolf Jaenisch at the Massachusetts Institute of Technology, the leading US-based researcher working on iPS cells, argues that some papers from Asia are so badly written that they are difficult to assess."1 The article, titled “Paper trail: Inside the stem cell wars,” explores why research papers from laboratories in the USA are published faster than those from other laboratories in the field of stem cell research.
-
-Poor English includes not only outright errors of spelling, grammar, and punctuation but also faulty construction of sentences, unidiomatic expressions, and odd usage that is obtrusive enough to deflect a reviewer’s attention from the substance of the paper to its style. The fact that the manuscript under review is written by someone to whom English is not the first language is irrelevant to judging the scientific worth of the paper, but it may delay both the review and the subsequent editing of that manuscript. A few errors related to language are minor blemishes in a research paper, and reviewers might not even notice them, but too many errors are bound to reflect adversely on the research paper. In the worst-case scenario, poor English makes it impossible for a reviewer to assess the paper.
-
-Even after a research paper is published, if it is written in poor English, the impact of the paper is reduced because the paper is less likely to be cited because fewer people – especially among those publishing in mainstream English-language journals – are likely to read it.
-
-</p>
-    </div>
-  </div>
                </div>
 
              </div>
+             <div class="text-center">
+                 <h2 style="color:#D0166F;">Our purpose</h2>
+             </div>
+             <div class="row section_1">
+               <div class="col-md-4">
+                 <figure>
+                   <div class="intro1" style="width:350px; height:480px;">
+              <img src="images/hometobica/intro1.jpg" alt="">
+            </div>
+              <figcaption>Experienced and professional teachers </figcaption>
+                <figcaption>Reform curriculum according to modern education trends </figcaption>
+                <figcaption>Appropriate learning method oriented training global citizens</figcaption>
+            </figure>
+               </div>
+               <div class="col-md-4">
+                 <figure>
+                    <div class="intro1" style="width:350px; height:480px;">
+               <img src="images/hometobica/intro2.jpg" alt="">
+             </div>
+                     <figcaption>Students are encouraged to express their personal views</figcaption>
+                     <figcaption>Exciting extracurricular activities complement many necessary skills</figcaption>
+                     <figcaption>Students also gain more practical knowledge</figcaption>
+             </figure>
+               </div>
+               <div class="col-md-4">
+                 <figure>
+                    <div class="intro1" style="width:350px; height:480px;">
+               <img src="images/hometobica/intro3.jpeg" alt="">
+             </div>
+                     <figcaption>Confidently submit to international exams like Cambridge and IELTS</figcaption>
+                     <figcaption>Confident language, will confidently communicate and succeed for the future</figcaption>
+                     <figcaption>Confidently conquer and adapt to any environment in the world</figcaption>
+             </figure>
+               </div>
+
+             </div>
+
              <div class="row">
                <div class="col-md-12 none">
 
@@ -322,14 +341,14 @@ Even after a research paper is published, if it is written in poor English, the 
 
                               </div>
 
-                          <div class="col-md-8   ">
-
+                          <div class="col-md-8 " >
+                          <div class="">
                         <b>  <h2 class="text-center">History begin</h2></b>
-                       <p style="color:#BAB6B6;">Our technology and art complex ToBica Our native, English and English, English, English and English, Vietnamese and English
+                       <p >Our technology and art complex ToBica Our native, English and English, English, English and English, Vietnamese and English
 
 Masculine masculine The rest of us, part of one of the categories</p>
-                       <p style="color:#BAB6B6;">We have experienced many changes in many directions to get the necessary experience. The goal is to lead young people who are not good at English and wish you a bright future in the future.</p>
-
+                       <p >We have experienced many changes in many directions to get the necessary experience. The goal is to lead young people who are not good at English and wish you a bright future in the future.</p>
+                   </div>
                           </div>
 
         </div>
@@ -384,7 +403,7 @@ Masculine masculine The rest of us, part of one of the categories</p>
                           <div class="col-md-6">
                             <h3 style="color:#EF993D">WHY CHOOSE Tobica English?</h3>
 
-                            <p style="color:#BAB6B6;">We offer a range of training packages in a range of subject areas and can offer blended learning opportunities to best meet your needs. If sitting in a room with a trainer and having the opportunity for discussion with other learners sounds good to you then we can offer this. If you prefer to study in your own time and at your own speed then one of our world class facilities.
+                            <p style="">We offer a range of training packages in a range of subject areas and can offer blended learning opportunities to best meet your needs. If sitting in a room with a trainer and having the opportunity for discussion with other learners sounds good to you then we can offer this. If you prefer to study in your own time and at your own speed then one of our world class facilities.
 
 If you prefer to study in your own time and at your own speed then one of our e-learning packages may be right up your street. There is a third option, which is you like the sound of both but perhaps can’t attend all training sessions, this is when blended learning comes into its own.</p>
                               <span class="btn btn-warning">Đăng kí tư vấn ngay</span>
@@ -511,8 +530,7 @@ If you prefer to study in your own time and at your own speed then one of our e-
                               <div class="card bg-dark text-white">
   <img class="card-img" src="images/hometobica/bang.jpg" alt="Card image">
   <div class="card-img-overlay">
-  <b>  <h5 class="card-title" style="color:red">
-degree</h5></b>
+
 
 
   </div>
@@ -672,10 +690,6 @@ degree</h5></b>
          </div>
            <!--End footer -->
            <!-- Content Home-->
-
-
-
-
              <!-- Script -->
        <script src="js/libs/jquery-1.9.1.min.js" type="text/javascript"></script>
          <script src="js/libs/jssor.js" type="text/javascript"></script>
