--- a/home.html
+++ b/home.html
@@ -340,7 +340,7 @@
                            <ul>
                               <li class="list-group-item">
                                  <a id="xem1"><img src="images/hometobica/add.png" alt="">OUR MISSION</a>
-                                 <p id="xemthem1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                                 <p id="xemthem1">With years of experience and innovative teaching methods, we want to bring knowledge and confidence to students to help them grow and change themselves in the most positive way.</p>
                               </li>
                               <li class="list-group-item">
                                  <a id="xem2"><img src="images/hometobica/add.png" alt="">OUR PHILOSOPHY</a>
@@ -492,7 +492,7 @@
                </div>
                <div class="row text-center">
                   <div class="card bg-dark text-white">
-                     <img class="card-img" src="images/hometobica/bang.jpg" alt="Card image">
+                     <img class="card-img" src="images/homeTobica/degree.webp" alt="Card image">
                      <div class="card-img-overlay">
                      </div>
                   </div>
