--- a/home.html
+++ b/home.html
@@ -80,7 +80,7 @@
                                  <div class="drop-menu  menu_page" aria-labelledby="navbarDropdownMenuLink">
                                     <a class="drop-item" href="#">Basic course</a>
                                     <a class="drop-item" href="#">Advanced course </a>
-                                    <a class="drop-item" href="#">Exam Preparation Course Toeic - Toefl</a>
+                                    <a class="drop-item" href="#">Course Toeic - Toefl</a>
                                  </div>
                               </li>
                               <li class="nav-item dropdown ">
@@ -92,8 +92,17 @@
                                     <a class="drop-item" href="#">Event photos</a>
                                  </div>
                               </li>
+                              <li class="nav-item dropdown ">
+                                 <a class="nav-link drop-toggle" href="#" id="navbarDropdToeic Exam Preparation Course - ToeflownMenuLink">
+                                 Contact
+                                 </a>
+                                 <div class="drop-menu menu_page" aria-labelledby="navbarDropdownMenuLink">
+                                    <a class="drop-item" href="hocvien.html">Feedback</a>
+                                    <a class="drop-item" href="#">Registration</a>
+                                 </div>
+                              </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="#">Contact Us</a>
+                                 <a class="nav-link" href="#">About Us</a>
                               </li>
                            </ul>
                         </div>
@@ -331,7 +340,6 @@
                         <h6> – education is a right not a privilege</h6>
                         </p>
                         <br>
-                        <p>    If you prefer to study in your own time and at your own speed then one of our e-learning packages may be right up your street.</p>
                      </div>
                      <div class="col-md-6">
                         <h3>OUR VALUES</h3>
@@ -370,109 +378,16 @@
                <div class="row">
                   <div class="col-md-6">
                      <h3 style="color:#EF993D">WHY CHOOSE Tobica English?</h3>
-                     <p style="">We offer a range of training packages in a range of subject areas and can offer blended learning opportunities to best meet your needs. If sitting in a room with a trainer and having the opportunity for discussion with other learners sounds good to you then we can offer this. If you prefer to study in your own time and at your own speed then one of our world class facilities.
-                        If you prefer to study in your own time and at your own speed then one of our e-learning packages may be right up your street. There is a third option, which is you like the sound of both but perhaps can’t attend all training sessions, this is when blended learning comes into its own.
+                     <p style="">We offer a range of training packages in a range of subject areas and can offer blended learning opportunities to best meet your needs. If sitting in a room with a trainer and having the opportunity for discussion with other learners sounds good to you then we can offer this. If you prefer to study in your own time and at your own speed then one of our world class facilities.If you prefer to study in your own time and at your own speed then one of our e-learning packages may be right up your street. There is a third option, which is you like the sound of both but perhaps can’t attend all training sessions, this is when blended learning comes into its own.
                      </p>
-                     <span class="btn btn-warning">Sign up for advice immediately</span>
+                     <span class="btn btn-warning">Sign up </span>
                   </div>
                   <div class="col-md-6">
                      <iframe width="500" height="275" src="https://www.youtube.com/embed/juKd26qkNAw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                   </div>
                </div>
-<<<<<<< HEAD
 
-=======
-               <div class="text-center">
-                  <h1 style="align:center;">Change your think, you can change the world</h1>
-               </div>
-               <div class="row mission">
-                  <div class="col-md-4 mt-4 ">
-                     <img src="images/hometobica/xsmax.png " alt="">
-                  </div>
-                  <div class="col-md-2">
-                  </div>
-                  <div class="col-md-3 class_1 text-center  mt-4 mb-4">
-                     <figure>
-                        <img src="images/hometobica/beat1.jpg" alt="..." class="rounded-circle">
-                        <figcaption>
-                           <h3>New application </h3>
-                        </figcaption>
-                        <figcaption style="">Friendly class, complete accessories, modern teaching style.
-                           Classes with more than 50 students and 3 tutors at all times.
-                        </figcaption>
-                     </figure>
-                     <figure>
-                        <img src="images/hometobica/beat2.jpg" alt="..." class="rounded-circle">
-                        <figcaption>
-                           <h3>Most useful</h3>
-                        </figcaption>
-                        <figcaption style="">With Teaching Skills you have never met in any school,
-                           Commitment to good English after 3 months.
-                        </figcaption>
-                     </figure>
-                  </div>
-                  <div class="col-md-3 class_1 text-center  mt-4 mb-4">
-                     <figure>
-                        <img src="images/hometobica/earthh.jpg" alt="..." class="rounded-circle">
-                        <figcaption>
-                           <h3>Breakthroughs</h3>
-                        </figcaption>
-                        <figcaption style="">For the purpose of reaching out to the globe, experience is the decisive thing
-                           with over 10 years of teaching experience.
-                        </figcaption>
-                     </figure>
-                     <figure>
-                        <img src="images/hometobica/beat3.jpg" alt="..." class="rounded-circle">
-                        <figcaption>
-                           <h3>New breakthrough</h3>
-                        </figcaption>
-                        <figcaption style="">Video support and thousands of lectures can be reviewed on 4.0 integrated technology application.
-                           Questions and answers right on the website
-                        </figcaption>
-                     </figure>
-                  </div>
-               </div>
-               <div class="text-center">
-                  <span class="btn btn-warning">
-                     <h3 style="color:black;">SEE MORE</h3>
-                  </span>
-               </div>
->>>>>>> fceebedec3cae9f9877883850b02295aedc4db82
-               <div class="row">
-                  <div class="col-md-12 none">
-                  </div>
-               </div>
-               <div class="row  mission">
-                  <div class="col-md-4">
-                     <div class="card van_de" style="width: 18rem;">
-                        <div class="card-body">
-                           <h5 class="card-title">Rootlessness</h5>
-                           <p class="card-text">You do not know anything about English or have studied but because you are not focused so you do not know the knowledge so you have lost your roots.</p>
-                           <span class="btn btn-light vd"style="color:#474CAD">Your problems!</span>
-                        </div>
-                     </div>
-                  </div>
-                  <div class="col-md-4">
-                     <div class="card van_de" style="width: 18rem;">
-                        <div class="card-body">
-                           <h5 class="card-title">Communication Confusion</h5>
-                           <p class="card-text ">You used to be depressed, it is a little person who says, Ngum comes in contact with people
-                              or ever had psychological symptoms.
-                           </p>
-                           <span class="btn btn-light vd"style="color:#474CAD">Your Problem!</span>
-                        </div>
-                     </div>
-                  </div>
-                  <div class="col-md-4">
-                     <div class="card  van_de" style="width: 18rem;">
-                        <div class="card-body">
-                           <h5 class="card-title">Lazy ???</h5>
-                           <p class="card-text">You are lazy, lazy things, do not want to touch many things for fear of crashing, there is no gift to please others.</p>
-                           <span class="btn btn-light vd" style="color:#474CAD">Your Problem!</span>
-                        </div>
-                     </div>
-                  </div>
-               </div>
+
                <div class="row">
                   <div class="col-md-3">
                      <h1>1</h1>
