--- a/home.html
+++ b/home.html
@@ -406,6 +406,10 @@
                      <h5 class="h5">ALLIANCE WIDTH COUNTRY</h5>
                   </div>
                </div>
+               <div class="row">
+                  <div class="col-md-12 none">
+                  </div>
+               </div>
                <div class="text-center">
                   <h1 style="align:center;color:red;">Degree</h1>
                </div>
