--- a/hocvien.html
+++ b/hocvien.html
@@ -17,7 +17,7 @@
       <div class="main">
          <div class="wrapper">
             <div class="container">
-               <div class="row">
+               <div class="row head_page">
                   <div class="col-md-12 clearfix header-section">
                      <div class="col-md-2 tobica-logo float-left">Logo</div>
                      <nav class="navbar navbar-expand-lg navbar-light float-left">
@@ -25,46 +25,55 @@
                         <span class="navbar-toggler-icon"></span>
                         </button>
                         <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                           <ul class="navi-css head_sv">
+                           <ul class="navi-css">
                               <li class="nav-item">
-                                 <a class="nav-link" href="home.html">Trang Chủ</a>
+                                 <a class="nav-link" href="home.html">Home</a>
                               </li>
                               <li class="nav-item dropdown">
                                  <a class="nav-link drop-toggle" href="#" id="navbarDropdownMenuLink" >
-                                 Tin tức
+                                 News
                                  </a>
-                                 <div class="drop-menu" aria-labelledby="navbarDropdownMenuLink">
-                                    <a class="drop-item" href="#">Tin học viên</a>
-                                    <a class="drop-item" href="#">Tin sự kiện</a>
+                                 <div class="drop-menu menu_page" aria-labelledby="navbarDropdownMenuLink">
+                                    <a class="drop-item" href="hocvien.html">Student news</a>
+                                    <a class="drop-item" href="#">Event news</a>
                                  </div>
                               </li>
                               <li class="nav-item dropdown">
                                  <a class="nav-link drop-toggle" href="#" id="navbarDropdownMenuLink">
-                                 Khóa học
+                                 Course
                                  </a>
-                                 <div class="drop-menu" aria-labelledby="navbarDropdownMenuLink">
-                                    <a class="drop-item" href="#">Khóa học cơ bản</a>
-                                    <a class="drop-item" href="#">Khóa học nâng cao </a>
-                                    <a class="drop-item" href="#">Khóa luyện thi Toeic - Toeft</a>
+                                 <div class="drop-menu  menu_page" aria-labelledby="navbarDropdownMenuLink">
+                                    <a class="drop-item" href="#">Basic course</a>
+                                    <a class="drop-item" href="#">Advanced course </a>
+                                    <a class="drop-item" href="#">Course Toeic - Toefl</a>
                                  </div>
                               </li>
-                              <li class="nav-item dropdown">
-                                 <a class="nav-link drop-toggle" href="#" id="navbarDropdownMenuLink">
-                                 Thư viện
+                              <li class="nav-item dropdown ">
+                                 <a class="nav-link drop-toggle" href="#" id="navbarDropdToeic Exam Preparation Course - ToeflownMenuLink">
+                                 Library
                                  </a>
-                                 <div class="drop-menu" aria-labelledby="navbarDropdownMenuLink">
-                                    <a class="drop-item" href="#">Ảnh học viên</a>
-                                    <a class="drop-item" href="#">Ảnh sự kiện</a>
+                                 <div class="drop-menu menu_page" aria-labelledby="navbarDropdownMenuLink">
+                                    <a class="drop-item" href="hocvien.html">Student photos</a>
+                                    <a class="drop-item" href="#">Event photos</a>
+                                 </div>
+                              </li>
+                              <li class="nav-item dropdown ">
+                                 <a class="nav-link drop-toggle" href="#" id="navbarDropdToeic Exam Preparation Course - ToeflownMenuLink">
+                                 Contact
+                                 </a>
+                                 <div class="drop-menu menu_page" aria-labelledby="navbarDropdownMenuLink">
+                                    <a class="drop-item" href="hocvien.html">Feedback</a>
+                                    <a class="drop-item" href="#">Registration</a>
                                  </div>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="#">Liên hệ</a>
+                                 <a class="nav-link" href="#">About Us</a>
                               </li>
                            </ul>
                         </div>
                      </nav>
                      <div class="col-md-3 tobica-login float-right">
-                        <button type="button" class="btn btn-warning btn-login-tobica">Đăng nhập</button>
+                        <button type="button" class="btn btn-warning btn-login-tobica">Login</button>
                      </div>
                      <div>
                      </div>
