--- a/hocvien.html
+++ b/hocvien.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <!-- Style CSS -->
-      <link rel="stylesheet" href="css/styles1.css">
-      <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
-      <link href="bootstrap/bootstrap.min.css" rel="stylesheet">
-      <!-- End Style CSS -->
-      <link rel="stylesheet" href="css/news.css">
+     <meta charset="UTF-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+     <!-- Style CSS -->
+     <link rel="stylesheet" href="css/styles1.css">
+     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+     <link href="bootstrap/bootstrap.min.css" rel="stylesheet">
+     <!-- End Style CSS -->
+     <script src="js/jquery-3.3.1.min.js"></script>
+     <link rel="stylesheet" href="css/news.css">
+     <title>TOBICA - Trang Chủ</title>
+     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+     <link rel="stylesheet" href="css/home.css">
       <title>TOBICA - Trang Chủ</title>
+
    </head>
    <body style="background:#F7F5F4;">
+      <!-- Start Header -->
       <!-- Start Header -->
       <div class="main">
          <div class="wrapper">
